fix(import account): fix 'phrases are being cut off on mobile devices'

--- a/pages/setup/InputAccount/InputAccount.less
+++ b/pages/setup/InputAccount/InputAccount.less
@@ -7,15 +7,15 @@
   text-align: center;
 
   .input-account-body {
-    min-width: 32rem;
+    width: 32rem;
     align-self: center;
     margin-bottom: 25vh;
     .recover-account {
-      min-width: 24rem;
+      width: 24rem;
     }
     .columns {
       margin: @xlarge-spacing auto;
-      max-width: 24rem;
+      width: 24rem;
       .column {
         padding: @xlight-spacing;
         .tag,
@@ -26,6 +26,19 @@
         .tag {
           margin: @xlight-spacing 0;
         }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: @mobile-breakpoint) {
+  .container {
+    .input-account-body {
+      width: 90vw;
+      margin-bottom: 5rem;
+      .recover-account,
+      .columns {
+        width: 100%;
       }
     }
   }
